# nxu_nwm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  onekey_linux_cpu_dynamic.sh  onekey_linux_gpu_dynamic.sh  win10_vs2019_debug_shared.bat  win10_vs2019_release_shared.bat
cmake/: find_depends.cmake  platform_compiler.cmake  version.cmake
config/: nxu_nwm_gconfig.h.in
source/: CMakeLists.txt
source/include/: nxu_common.h  nxu_nwm_api.h  nxu_nwm_utils.h
source/src/: nxu_nwm_api.cpp  nxu_nwm_utils.cpp
tools/: CMakeLists.txt  OutputFileManager.cpp  OutputFileManager.hpp  TargetDetector.cpp  TargetDetector.hpp  nwm_tools_sel.cpp
